@@ -131,9 +131,29 @@ class Affine:
     d: float = field(converter=float)
     e: float = field(converter=float)
     f: float = field(converter=float)
+
+    # The class has 3 attributes that don't have to be specified: g, h,
+    # and i. If they are, the given value has to be the same as the
+    # default value. This allows a new instances to be created from the
+    # tuple form of another, like Affine(*Affine.identity()).
+
     g: float = field(default=0.0, converter=float)
+    @g.validator
+    def _check_g(self, attribute, value):
+        if value != 0.0:
+            raise ValueError("g must be equal to 0.0")
+
     h: float = field(default=0.0, converter=float)
+    @h.validator
+    def _check_h(self, attribute, value):
+        if value != 0.0:
+            raise ValueError("h must be equal to 0.0")
+
     i: float = field(default=1.0, converter=float)
+    @i.validator
+    def _check_i(self, attribute, value):
+        if value != 1.0:
+            raise ValueError("i must be equal to 1.0")
 
     @classmethod
     def from_gdal(cls, c: float, a: float, b: float, f: float, d: float, e: float):
