@@ -4,6 +4,8 @@ CHANGES
 3.0a1 (TBD)
 -----------
 
+- Affine raises ValueError if initialized with values for g, h, and i that are
+  not 0.0, 0.0, and 1.0, respectively (#118).
 - Python version support was changed to 3.9+ (#110).
 - Switch from namedtuple to attrs for implementation of the Affine class and
   use functools.cached_property(), which absolutely requires Python 3.8+
